# terror-reco

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  STRIPE_TESTING.md  app.db  config_embedding.yaml  debug_stripe.py  deployment_checklist.py  docker-compose.yml  pyproject.toml  test_deployment.py  test_deployment_simple.py  test_stripe_local.py  test_stripe_simple.py
.github/workflows/: ci.yml
app/: auth.py  db.py  history.py  main.py  models.py  security.py  settings.py  stripe_payments.py
app/services/: corpus.py  omdb_client.py  recommender.py  unified_recommender.py
app/services/strategies/: base.py  embedding_omdb.py  keyword_omdb.py
app/static/: styles.css
app/templates/: _base.html  coffee.html  coffee_cancel.html  coffee_success.html  history.html  index.html  loading.html  login.html  register.html  results.html
docs/: STRIPE_SETUP.md  api-reference.md  architecture.md  database.md  deployment.md  development.md  notebooks.md  readme_strategies.md  recommendation-engine.md
notebooks/: 0-1-improvements-baseline.ipynb  0-2-better-use-embeddings.ipynb  0-2-improvements-baseline copy.ipynb  0-test-recommendation.ipynb  1-evaluation.py  2-embedding-models.py  3-cross-encoder.py  4-weight-tuning.py
scripts/: download_model.py
tests/: conftest.py  debug_stripe.py  deployment_checklist.py  manual_deployment.py  manual_deployment_simple.py  manual_stripe_simple.py  test_auth.py  test_deployment.py  test_deployment_simple.py  test_recommender_omdb.py  test_strategies.py  test_stripe_local.py  test_stripe_simple.py
