[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terror-reco"
version = "0.1.0"
description = "Horror movie recommendation engine (FastAPI + OMDb)"
readme = "README.md"
authors = [{ name = "TerrorReco" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "gunicorn>=21.2.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.3",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.4",
  "tenacity>=9.0.0",
  "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.1",
  "mypy>=1.11.0",
  "ruff>=0.6.0",
  "black>=24.8.0",
  "types-Jinja2>=2.11.9",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
